# timeseries-database

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  debug_inputs.txt  perf.sh  table1  temp_command.txt
nvim/: init.lua  lazy-lock.json
nvim/after/plugin/: lsp.lua  nvim-cmp.lua  nvim-tree.lua  telescope.lua  tresitter.lua
nvim/lua/plugins/: harpoon.lua  nvim-cmp.lua  treesitter.lua
nvim/lua/rolo/: init.lua  remap.lua
src/: data_point.h  database.cpp  database.h  datapoint_decoder.h  decoder.h  encoder.h  error.h  generic_ss_table.h  indexes_block.cpp  indexes_block.h  logger.cpp  main.cpp  matedata_block.cpp  metadata_block.h  ss_table.cpp  ss_table.h  utils.cpp  utils.h  write_back_cache.h
src/cache/: write_back_cache.h
src/datapoints/: data_point.h
src/encoding/: binary_encoder.h  decoder.h  encodable.h  encoder.h
src/indexing/: indexed_ss_table.cpp  indexed_ss_table.h  indexed_ss_table_reader.cpp  indexed_ss_table_reader.h  indexed_ss_table_writer.cpp  indexed_ss_table_writer.h  indexes_block.cpp  indexes_block.h  ss_table_indexer.cpp  ss_table_indexer.h
src/logger/: logger.cpp  logger.h
src/query/: parser.cpp  parser.h
src/server/: server.cpp  server.h
src/storage/: matedata_block.cpp  metadata_block.h  ss_table_storage.cpp  ss_table_storage.h  storage_manager.cpp  storage_manager.h
src/typed_series/: typed_datapoint.h  typed_series.h
storage/: cache  cli-1743451437723  cli-1743453588557  cli-1743454070406  cli-1743454375958  cli-1743455153768  cli-1743455206299  cli-1743455742320  cli-1743455775381  typed_test_2-1743970838604
tests/: test_database.cpp  test_tsdb.cpp
